Regular Testings implemented

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.5",
+    "jest": "^27.5.1",
     "react-test-renderer": "^18.3.1"
   }
 }
